--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -43,7 +43,7 @@ layout: default
 
 {% include team-section.html %}
   
-<section class="section">
+<!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -52,4 +52,4 @@ layout: default
     </div>
     {% include client-slider.html %}
   </div>
-</section>
+</section> -->
