--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 // Color Variables
 // $primary-color: #41228e;
-$primary-color: #2a0056;
+$primary-color: 1e023c;
 $secondary-color: #2bfdff;
 $text-color: #4c4c4c;
 $text-color-dark: #000;
