--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,6 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
 
+  {% include crisp.html %}
+  
 </head>
