--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
       </div>
     </div>
   </div>
+  {% include crisp.html %}
   <div class="border-top text-center border-dark py-5">
     <p class="mb-0 text-light">Copyright © <script>
         var CurrentYear = new Date().getFullYear()
