--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
   <link rel="alternate" type="application/rss+xml" title="Stephen Ajulu" href="https://stephenajulu.com/rss.xml"/>
 {% seo %}
+  {% include links.html %}
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
